--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,38 @@
     margin-top: -40px;
 }
 .back-img h1{
-    padding-top: 50px;
+    padding-top: 90px;
     padding-bottom: 0px;
-    font-size: 55px;
+    font-size: 50px;
+}
+.input-group{
+    width: 90%;
+    max-width: 500px;
+    border-radius: 30px;
+    background: #fff;
+    margin: auto;
+    padding: 2px;
+}
+.form-control{
+    border: 0;
+    border-radius: 30px;
+    margin: 2px;
+    box-shadow: none;
+}
+.input-group-text{
+    width: 100%;
+    background-image: linear-gradient(#00ff7e,#1f3d90);
+    border: 0 !important;
+    color: #fff !important;
+    padding: 0 25px !important;
+    border-radius: 30px !important;
+    box-shadow: none !important;
+}
+/* features*/
+.features{
+    padding: 100px 0;
+}
+h1 {
+    text-align: center;
+    padding-bottom: 30px;
 }
