--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ h1 {
 }
 .price{
     margin-top: 10px;
+    margin-left: 10px;
     width: 50px;
     height: 50px;
     background: #ff5722;
@@ -105,8 +106,8 @@ h1 {
     font-size: 15px;
     color: #ff5722;
 }
-.features-details{
-    padding: 20px;
+.feature-details{
+    padding: 0 20px 30px 20px;
     text-align: justify;
 }
 .feature-details h4{
