--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ h1 {
     color: #fff;
     font-weight: 600;
     border-radius: 50%;
-    padding: 10px;
+    padding: 12px 8px 10px;
     box-shadow: 0 0 10px 1px rgba(37, 73, 214, 0.18);
 }
 .rating{
@@ -159,7 +159,7 @@ h1 {
     height: 80%;
     background-position: center;
     background-size: cover;
-    padding: 14% 0;
+    padding: 300px 0;
 }
 .banner-highlights{
     padding: 20px 0;
@@ -176,4 +176,5 @@ h1 {
     background: transparent;
     color:whitesmoke;
     float: right;
+    margin-top: 25px;
 }
