--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ h1 {
 }
 .banner-highlights{
     padding: 20px 0;
-    background: rgba(0,0,0,0.7);
+    background: rgba(0, 0, 0, 0.411);
     text-align: center;
     color: #fff;
 }
